# luckyseven-solana

./: Anchor.toml  CHANGELOG.md  README.md  constants.ts  package.json
migrations/: deploy.ts
programs/luckyseven/: Cargo.toml
programs/luckyseven/src/: lib.rs
tests/: luckyseven.ts  mint_tokens.ts  tokens.spec.ts  tokens.ts
